Made changes to request permission to read SMS and log the SMS info for testing.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <TextView
+        android:id="@+id/sample_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -14,5 +15,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/sample_button_id"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="@string/sample_button_string"
+        app:layout_constraintTop_toBottomOf="@+id/sample_text_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
